--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -203,8 +203,31 @@ nav {display: none;}
     opacity: .8;
 }
 
+.footer {
+    background: #111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
+}
 
+.footer a {
+    color: inherit;
+    text-decoration: none;
+}
 
+.footer_link{
+    font-size: var(--fs-h3);
+    font-weight: var(--fw-bold);
+}
+
+.contact_list{
+    list-style-type:none;
+}
+
+.footer_link:hover {
+    opacity: .7;
+    text-decoration: underline;
+}
 
 
 
