--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -13,7 +13,7 @@
 
     --clr-bg: #fff;
     --clr-dark: #303030;
-    --clr-accent: #16e0bd;
+    --clr-accent: #1dd6c7;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -32,6 +32,9 @@
     }
 }
 
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     background: var(--clr-bg);
@@ -79,10 +82,110 @@ h3 { font-size: var(--fs-h3)}
     background: var(--clr-accent);
     font-family: var(--ff-sans);
     margin-bottom: 1em;
-    padding: .25em 1em;
+    padding: .25em 8em;
 }
 
-nav {display: none;}
+/* nav */
+
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.nav{
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-bg);
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5,0,.5,1);
+}
+
+.nav_list{
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav_link{
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h2);
+    text-decoration: none;
+}
+
+.nav_link:hover{
+    color: var(--clr-accent);
+}
+
+.nav_toggle{
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+
+.nav_open .nav {
+    transform: translateX(0);
+}
+
+.nav_open .nav_toggle {
+    position: fixed;
+}
+
+.nav_open .nav_button {
+    transform: rotate(.625turn);
+}
+
+.nav_open .nav_button::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav_open .nav_button::after {
+    opacity: 0;
+}
+
+.nav_button{
+   
+    display: block;
+    position: relative;
+
+}
+
+.nav_button,
+.nav_button::before,
+.nav_button::after {
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.nav_button::before,
+.nav_button::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.nav_button::before {top: 6px;}
+.nav_button::after {bottom: 6px;}
 
 /* intro */
 
@@ -172,22 +275,29 @@ nav {display: none;}
 }
 
 .about_subtitle{
-    color: var(--clr-accent);
+    color: var(--clr-dark);
     font-weight: var(--fw-bold);
     margin-bottom: 2em;
 }
 
+.project_subtitle{
+    color: var(--clr-accent);
+}
+
 .portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    place-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 }
 
 .portfolio_item{
-    background: var(--clr-accent);
+    background: var(--clr-dark);
     overflow: hidden;
 }
 
 .portfolio_image{
+    height:400px;
+    width:500px;
     transition: transform 750ms cubic-bezier(.5,0,.5,1),
     opacity 250ms linear;
 }
@@ -200,7 +310,7 @@ nav {display: none;}
 .portfolio_image:hover,
 .portfolio_item:focus .portfolio_image{
     transform: scale(1.2);
-    opacity: .8;
+    opacity: .5;
 }
 
 .footer {
@@ -222,6 +332,12 @@ nav {display: none;}
 
 .contact_list{
     list-style-type:none;
+    margin: 0;
+    padding: 0;
+}
+
+.contact_item{
+    padding: .75em 0;
 }
 
 .footer_link:hover {
@@ -229,8 +345,42 @@ nav {display: none;}
     text-decoration: underline;
 }
 
+/* project pages */
 
+.project_item{
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+}
 
+.project_item p {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.project_links{
+    text-align: center;
+    list-style-type:none;
+    margin: 0;
+    padding: 0;
+}
+
+.proj_link {
+    font-size: var(--fs-h3);
+    font-weight: var(--fw-bold);
+    color: var(--clr-dark);
+}
+
+.project_multi_images{
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.project_img{
+    width: 300px;
+    height: 300px;
+}
 
 
